# mafat-challenge

./: .gitignore  baseline_model.ipynb  correlation.py  graph_based_model.ipynb  graph_model_funcs.py  preprocessing.py  pyproject.toml  requirements.txt  setup_machine.sh  time_based_model.ipynb
code/: 27_scores_real.pkl  minmax_test.py  model.py  notebook(2).ipynb  psd_bins.csv  sample_final_scores.parquet  selected_features.csv  time_based_model copy.ipynb  time_based_model.ipynb  time_based_model_works_good.ipynb  timeseries_processing.py  tuner.py
code/domain_activity_timeseries.parquet/: part-0000.snappy.parquet  part-0001.snappy.parquet  part-0002.snappy.parquet  part-0003.snappy.parquet  part-0004.snappy.parquet  part-0005.snappy.parquet  part-0006.snappy.parquet  part-0007.snappy.parquet  part-0008.snappy.parquet  part-0009.snappy.parquet  part-0010.snappy.parquet  part-0011.snappy.parquet  part-0012.snappy.parquet  part-0013.snappy.parquet  part-0014.snappy.parquet  part-0015.snappy.parquet  part-0016.snappy.parquet  part-0017.snappy.parquet  part-0018.snappy.parquet  part-0019.snappy.parquet  part-0020.snappy.parquet  part-0021.snappy.parquet
code/functions/: impute_missing_values.py  weighter_final_scores
code/submission/: XGB_model.json  best_features.json  cls_columns.json  cls_features.py  cls_mean_score_scaler.json  cls_proportion_scaler.json  content_based_features.py  domain_timeseries_processing.py  domains_visited_proportions_cols.json  domains_visited_scaler.json  frequency_base_feats.py  load_and_prepare_input.py  max_domain_scaler.json  mean_scores_scaler.json  minmax_scaler.json  model.py  prepare_and_train_model.py  presentation.md  psd_df_scaler.json  selected_features.json  url_score_scaler.json  utils.py  valid_domains.json  weighted_score_scaler.json
code/submission/best_domain_activity.parquet/: part-0000.snappy.parquet  part-0001.snappy.parquet  part-0002.snappy.parquet  part-0003.snappy.parquet  part-0004.snappy.parquet  part-0005.snappy.parquet  part-0006.snappy.parquet  part-0007.snappy.parquet  (+13 more)
unused/: time_based_model.ipynb
