[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["tomtou-bspace <tom.touati@brain.space>"]
readme = "README.md"
[[tool.poetry.packages]]
include = "code"

[tool.poetry.dependencies]
python = "^3.10"
ray = {extras = ["tune"], version = "^2.44.1"}
pandas = "*"
numpy = "*"
scikit-learn = "*"
seaborn = "*"
matplotlib = "*"
xgboost = "*"
ipympl = "*"
ipywidgets = "*"
ipykernel = "*"
modin = "*"
sqlalchemy = "^2.0.39"
pyarrow = "17"
memray = "^1.16.0"
neptune = "^1.13.0"
fancyimpute = "^0.7.0"
missingpy = "^0.2.0"
missforest = "^4.2.3"
implicit = "^0.7.2"
xgboost-ray = "^0.1.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
